# torrent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  TODOS.md
crates/ferrite/: Cargo.toml
crates/ferrite-cli/: Cargo.toml
crates/ferrite-cli/src/: create.rs  download.rs  info.rs  main.rs
crates/ferrite-cli/tests/: cli_args.rs
crates/ferrite-core/: Cargo.toml
crates/ferrite-core/src/: create.rs  detect.rs  error.rs  file_priority.rs  file_selection.rs  file_tree.rs  hash.rs  hash_picker.rs  hash_request.rs  lib.rs  magnet.rs  merkle_state.rs  metainfo.rs  metainfo_v2.rs  peer_id.rs  resume_data.rs  storage_mode.rs
crates/ferrite-core/tests/: core_test.rs
crates/ferrite-dht/: Cargo.toml
crates/ferrite-dht/src/: actor.rs  bep44.rs  compact.rs  error.rs  krpc.rs  lib.rs  node_id.rs  peer_store.rs  routing_table.rs  storage.rs
crates/ferrite-nat/: Cargo.toml
crates/ferrite-nat/src/: actor.rs  error.rs  lib.rs  natpmp.rs  pcp.rs
crates/ferrite-nat/src/upnp/: mod.rs  soap.rs  ssdp.rs
crates/ferrite-session/: Cargo.toml
crates/ferrite-session/src/: alert.rs  ban.rs  choker.rs  disk.rs  disk_backend.rs  dscp.rs  end_game.rs  error.rs  extension.rs  have_buffer.rs  ip_filter.rs  lib.rs  lsd.rs  lt_trackers.rs  metadata.rs  peer.rs  peer_priority.rs  peer_state.rs  persistence.rs  pex.rs  piece_selector.rs  pipeline.rs  proxy.rs  queue.rs  rate_limiter.rs  session.rs  settings.rs  slot_tuner.rs  ssl_manager.rs  stats.rs  streaming.rs  super_seed.rs  torrent.rs  tracker_manager.rs  transport.rs  types.rs  url_guard.rs  utp_routing.rs  web_seed.rs  write_buffer.rs
crates/ferrite-session/src/i2p/: destination.rs  mod.rs  sam.rs
crates/ferrite-sim/: Cargo.toml
crates/ferrite-sim/src/: clock.rs  lib.rs  network.rs  swarm.rs  transport.rs
crates/ferrite-sim/tests/: swarm_tests.rs
crates/ferrite-storage/: Cargo.toml
crates/ferrite-storage/src/: cache.rs  chunk_tracker.rs  error.rs  file_map.rs  filesystem.rs  lib.rs  memory.rs  mmap.rs  storage.rs
crates/ferrite-tracker/: Cargo.toml
crates/ferrite-tracker/src/: compact.rs  error.rs  http.rs  lib.rs  udp.rs
crates/ferrite-utp/: Cargo.toml
crates/ferrite-utp/src/: congestion.rs  conn.rs  error.rs  lib.rs  packet.rs  socket.rs
crates/ferrite-wire/: Cargo.toml
crates/ferrite-wire/src/: codec.rs  error.rs  extended.rs  handshake.rs  holepunch.rs  lib.rs  message.rs  ssl.rs
crates/ferrite-wire/src/mse/: cipher.rs  crypto.rs  dh.rs  handshake.rs  mod.rs  stream.rs
crates/ferrite/examples/: create.rs  dht_lookup.rs  download.rs  stream.rs
crates/ferrite/src/: bencode.rs  client.rs  core.rs  dht.rs  error.rs  lib.rs  nat.rs  prelude.rs  session.rs  storage.rs  tracker.rs  utp.rs  wire.rs
crates/torrent/: Cargo.toml
crates/torrent-api/: Cargo.toml
crates/torrent-api/src/: error.rs  extractors.rs  lib.rs
crates/torrent-api/src/routes/: events.rs  extended.rs  mod.rs  session.rs  torrents.rs
crates/torrent-api/tests/: api_tests.rs
crates/torrent-bencode/: Cargo.toml
crates/torrent-bencode/benches/: bencode_bench.rs
crates/torrent-bencode/src/: de.rs  error.rs  lib.rs  ser.rs  span.rs  value.rs
crates/torrent-bencode/tests/: comprehensive.rs
crates/torrent-cli/: Cargo.toml
crates/torrent-cli/src/: create.rs  download.rs  info.rs  main.rs
crates/torrent-cli/tests/: cli_args.rs
crates/torrent-core/: Cargo.toml
crates/torrent-core/src/: create.rs  detect.rs  error.rs  file_priority.rs  file_tree.rs  hash.rs  hash_picker.rs  info_hashes.rs  lengths.rs  lib.rs  magnet.rs  merkle.rs  merkle_state.rs  metainfo.rs  metainfo_v2.rs  peer_id.rs  resume_data.rs  storage_mode.rs  torrent_version.rs
crates/torrent-core/tests/: core_test.rs
crates/torrent-dht/: Cargo.toml
crates/torrent-dht/src/: actor.rs  bep44.rs  compact.rs  error.rs  krpc.rs  lib.rs  lookup.rs  node_id.rs  peer_store.rs  routing_table.rs  storage.rs
crates/torrent-nat/: Cargo.toml
crates/torrent-nat/src/: actor.rs  gateway.rs  lib.rs  natpmp.rs  pcp.rs
crates/torrent-nat/src/upnp/: mod.rs  soap.rs  ssdp.rs
crates/torrent-session/: Cargo.toml
crates/torrent-session/benches/: disk_bench.rs
crates/torrent-session/src/: alert.rs  ban.rs  blocking_spawner.rs  buffer_pool.rs  choker.rs  chunk_mask.rs  disk.rs  disk_backend.rs  dscp.rs  end_game.rs  error.rs  extension.rs  hash_pool.rs  have_buffer.rs  io_uring_backend.rs  ip_filter.rs  lib.rs  listener.rs  lsd.rs  lt_trackers.rs  metadata.rs  peer.rs  peer_adder.rs  peer_codec.rs  peer_connection.rs  peer_handler.rs  peer_priority.rs  peer_scorer.rs  peer_state.rs  persistence.rs  pex.rs  piece_buffer_pool.rs  piece_reservation.rs  piece_selector.rs  pipeline.rs  proxy.rs  queue.rs  rate_limiter.rs  request_driver.rs  session.rs  (+21 more)
crates/torrent-session/src/i2p/: destination.rs  mod.rs  sam.rs
crates/torrent-sim/: Cargo.toml
crates/torrent-sim/src/: clock.rs  lib.rs  network.rs  swarm.rs  transport.rs
crates/torrent-sim/tests/: swarm_tests.rs
crates/torrent-storage/: Cargo.toml  PLAN.md
crates/torrent-storage/src/: async_storage.rs  bitfield.rs  cache.rs  chunk_tracker.rs  error.rs  file_map.rs  filesystem.rs  io_uring_backend.rs  lib.rs  memory.rs  mmap.rs  storage.rs
crates/torrent-tracker/: Cargo.toml
crates/torrent-tracker/src/: compact.rs  error.rs  http.rs  lib.rs  udp.rs
crates/torrent-utp/: Cargo.toml
crates/torrent-utp/src/: conn.rs  lib.rs  listener.rs  packet.rs  seq.rs  socket.rs  stream.rs
crates/torrent-wire/: Cargo.toml
crates/torrent-wire/src/: codec.rs  error.rs  extended.rs  handshake.rs  holepunch.rs  lib.rs  message.rs  ssl.rs
crates/torrent-wire/src/mse/: cipher.rs  crypto.rs  dh.rs  handshake.rs  (+2 more)
crates/torrent/examples/: create.rs  dht_lookup.rs  download.rs  stream.rs
crates/torrent/src/: bencode.rs  client.rs  core.rs  dht.rs  error.rs  lib.rs  nat.rs  prelude.rs  session.rs  storage.rs  tracker.rs  utp.rs  wire.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_metadata/: magnet.seed
fuzz/corpus/fuzz_peer_wire/: have.seed
fuzz/fuzz_targets/: bencode.rs  metadata.rs  peer_wire.rs  tracker.rs
(+172 files in other folders)
