[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.14.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alangaudet/ferrite"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Byte buffers
bytes = "1"

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# Testing
pretty_assertions = "1"
