[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.50.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/alan090/ferrite"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Byte buffers
bytes = "1"

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# Bitmask flags
bitflags = { version = "2", features = ["serde"] }

# Ed25519 signing (BEP 44 mutable DHT items)
ed25519-dalek = { version = "2" }

# Testing
pretty_assertions = "1"
