[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.87.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/alan090/torrent"
rust-version = "1.85"
homepage = "https://codeberg.org/alan090/torrent"
documentation = "https://docs.rs/torrent"
keywords = ["bittorrent", "torrent", "peer-to-peer", "p2p", "download"]
categories = ["network-programming"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

# Byte buffers
bytes = "1"

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"

# Bitmask flags
bitflags = { version = "2", features = ["serde"] }

# Ed25519 signing (BEP 44 mutable DHT items)
ed25519-dalek = { version = "2" }

# Cryptography (SHA1, SHA256 via BoringSSL)
ring = "0.17"

# Fast synchronization primitives
parking_lot = "0.12"

# Testing
pretty_assertions = "1"

[workspace.lints.clippy]
await_holding_lock = "deny"
large_enum_variant = "warn"
