[package]
name = "torrent-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
bytes = "1"
libfuzzer-sys = "0.4"
torrent-bencode = { path = "../crates/torrent-bencode" }
torrent-core = { path = "../crates/torrent-core" }
torrent-wire = { path = "../crates/torrent-wire" }
torrent-tracker = { path = "../crates/torrent-tracker" }

[[bin]]
name = "fuzz_bencode"
path = "fuzz_targets/bencode.rs"
doc = false

[[bin]]
name = "fuzz_peer_wire"
path = "fuzz_targets/peer_wire.rs"
doc = false

[[bin]]
name = "fuzz_tracker"
path = "fuzz_targets/tracker.rs"
doc = false

[[bin]]
name = "fuzz_metadata"
path = "fuzz_targets/metadata.rs"
doc = false
