[package]
name = "ferrite-dht"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kademlia DHT for BitTorrent (BEP 5)"

[dependencies]
ferrite-bencode = { path = "../ferrite-bencode" }
ferrite-core = { path = "../ferrite-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
