[package]
name = "ferrite-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Piece storage, verification, and disk I/O for BitTorrent"

[dependencies]
ferrite-core = { path = "../ferrite-core" }
memmap2 = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
