[package]
name = "ferrite-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BitTorrent tracker client: HTTP and UDP announce/scrape"

[dependencies]
ferrite-bencode = { path = "../ferrite-bencode" }
ferrite-core = { path = "../ferrite-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = { workspace = true }
libc = "0.2"
url = "2"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
