[package]
name = "ferrite-utp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "uTP (BEP 29) Micro Transport Protocol for ferrite"

[dependencies]
ferrite-core = { path = "../ferrite-core" }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
sha1 = "0.10"
tokio = { workspace = true, features = ["full"] }
