[package]
name = "ferrite-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BitTorrent peer wire protocol: messages, handshake, extensions"

[dependencies]
ferrite-bencode = { path = "../ferrite-bencode" }
ferrite-core = { path = "../ferrite-core" }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
