[package]
name = "ferrite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A Rust BitTorrent library — ergonomic facade for the ferrite crate family"

[dependencies]
ferrite-bencode = { path = "../ferrite-bencode" }
ferrite-core = { path = "../ferrite-core" }
ferrite-wire = { path = "../ferrite-wire" }
ferrite-tracker = { path = "../ferrite-tracker" }
ferrite-dht = { path = "../ferrite-dht" }
ferrite-storage = { path = "../ferrite-storage" }
ferrite-session = { path = "../ferrite-session" }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
