[package]
name = "torrent-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP REST API for the torrent engine"

[lints]
workspace = true

[dependencies]
torrent = { path = "../torrent", default-features = false }
axum = "0.8"
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
