[package]
name = "torrent-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP REST API for the torrent engine"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc"]
crypto-aws-lc = ["torrent/crypto-aws-lc"]
crypto-ring = ["torrent/crypto-ring"]

[dependencies]
torrent = { path = "../torrent", default-features = false }
axum = { version = "0.8", features = ["ws"] }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
http-body-util = "0.1"
serde_bytes = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tokio-tungstenite = "0.28"
tower = { version = "0.5", features = ["util"] }
