[package]
name = "torrent-bencode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serde-based bencode serialization for BitTorrent"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bencode_bench"
harness = false
