[package]
name = "torrent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for BitTorrent: hashes, metainfo, magnets, piece arithmetic"

[lints]
workspace = true

[dependencies]
torrent-bencode = { path = "../torrent-bencode" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

# Hashing
ring = { workspace = true }

# Encoding (hex, base32 for magnets)
hex = "0.4"
data-encoding = "2"

# URL parsing for magnets
url = "2"

[dev-dependencies]
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = "3"
