[package]
name = "torrent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for BitTorrent: hashes, metainfo, magnets, piece arithmetic"

[lints]
workspace = true

[features]
default = ["crypto-aws-lc"]
crypto-ring = ["dep:ring"]
crypto-openssl = ["dep:openssl"]
crypto-aws-lc = ["dep:aws-lc-rs"]

[dependencies]
torrent-bencode = { path = "../torrent-bencode" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }

# Hashing (select one backend via feature flags)
ring = { workspace = true, optional = true }
openssl = { version = "0.10", optional = true }
aws-lc-rs = { version = "1.16", optional = true }

# Encoding (hex, base32 for magnets)
hex = "0.4"
data-encoding = "2"

# URL parsing for magnets
url = "2"

[dev-dependencies]
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = "3"
