[package]
name = "torrent-dht"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kademlia DHT for BitTorrent (BEP 5)"

[lints]
workspace = true

[dependencies]
torrent-bencode = { path = "../torrent-bencode" }
torrent-core = { path = "../torrent-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ed25519-dalek = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
