[package]
name = "torrent-nat"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UPnP IGD / NAT-PMP / PCP port mapping for torrent"

[lints]
workspace = true

[dependencies]
torrent-core = { path = "../torrent-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
