[package]
name = "torrent-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Piece storage, verification, and disk I/O for BitTorrent"

[lints]
workspace = true

[dependencies]
torrent-core = { path = "../torrent-core" }
memmap2 = "0.9"
rustc-hash = "2"
smallvec = "1"
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
