[package]
name = "torrent-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Piece storage, verification, and disk I/O for BitTorrent"

[lints]
workspace = true

[features]
default = []
io-uring = ["dep:async-trait"]

[dependencies]
torrent-core = { path = "../torrent-core" }
async-trait = { version = "0.1", optional = true }
memmap2 = "0.9"
rustc-hash = "2"
serde = { workspace = true }
smallvec = "1"
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = { workspace = true }
