[package]
name = "torrent-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BitTorrent tracker client: HTTP and UDP announce/scrape"

[dependencies]
torrent-bencode = { path = "../torrent-bencode" }
torrent-core = { path = "../torrent-core" }
bytes = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = { workspace = true }
libc = "0.2"
url = "2"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
