[package]
name = "torrent-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BitTorrent peer wire protocol: messages, handshake, extensions"

[lints]
workspace = true

[dependencies]
torrent-bencode = { path = "../torrent-bencode" }
torrent-core = { path = "../torrent-core" }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { workspace = true }
sha1 = { version = "0.10", features = ["asm"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }
